--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1|^8.2",
+        "php": "^8.0|^8.1|^8.2|^8.3",
         "symfony/config": "^6.0|^6.1|^6.2|^6.3|^7.0",
         "symfony/dependency-injection": "^6.0|^6.1|^6.2|^6.3|^7.0",
         "symfony/http-kernel": "^6.0|^6.1|^6.2|^6.3|^7.0",
